# openportal

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md  REUSE.toml  SECURITY.md  invite_portal.toml
.cargo/: config.toml
.github/workflows/: build.yml  check.yml  python.yml  release.yml
bridge/: Cargo.toml
bridge/src/: main.rs
client/: Cargo.toml
client/src/: handlers.rs  main.rs
cluster/: Cargo.toml
cluster/src/: main.rs
clusters/: Cargo.toml
clusters/src/: main.rs
docs/: README.md
docs/bridge/: README.md
docs/cmdline/: README.md
docs/cmdline/cluster/: Cargo.toml
docs/cmdline/cluster/src/: main.rs
docs/cmdline/portal/: Cargo.toml
docs/cmdline/portal/src/: main.rs
docs/echo/: Cargo.toml  README.md  build.rs
docs/echo/src/: main.rs
docs/job/: Cargo.toml  README.md
docs/job/src/: main.rs
docs/specifications/: README.md  agent-configuration.md  bridge-api.md  instruction-protocol.md  json-types.md  notes.md  notification-protocol.md  python-api.md  security-model.md  typescript-bindings.md  wire-protocol.md
examples/: README.md
examples/echo/: README.md
examples/echo/src/: main.rs
filesystem/: Cargo.toml
filesystem/src/: cache.rs  fakequotaengine.rs  filesystem.rs  linuxquotaengine.rs  lustreengine.rs  main.rs  quotaengine.rs  volumeconfig.rs
filesystem/utils/: lfs
freeipa/: Cargo.toml  README.md
freeipa/src/: cache.rs  db.rs  freeipa.rs  main.rs
helm/bridge/: Chart.yaml  values.yaml
helm/bridge/templates/: _helpers.yaml  configmap.yaml  deployment.yaml  service.yaml
helm/cluster/: Chart.yaml  values.yaml
helm/cluster/templates/: _helpers.yaml  deployment.yaml  service.yaml
helm/clusters/: Chart.yaml  values.yaml
helm/clusters/templates/: _helpers.yaml  deployment.yaml  service.yaml
helm/filesystem/: Chart.yaml  values.yaml
helm/filesystem/templates/: _helpers.yaml  deployment.yaml  service.yaml
helm/freeipa/: Chart.yaml  values.yaml
helm/freeipa/templates/: _helpers.yaml  deployment.yaml  service.yaml
helm/platform/: Chart.yaml  values.yaml
helm/platform/templates/: _helpers.yaml  deployment.yaml  service.yaml
helm/portal/: Chart.yaml  values.yaml
helm/portal/templates/: _helpers.yaml  configmap.yaml  deployment.yaml  service.yaml
helm/provider/: Chart.yaml  values.yaml
helm/provider/templates/: _helpers.yaml  deployment.yaml  service.yaml
helm/slurm/: Chart.yaml  values.yaml
helm/slurm/templates/: _helpers.yaml  deployment.yaml  service.yaml
localaccount/: Cargo.toml
localaccount/src/: localaccount.rs  main.rs
oci/bridge/: Containerfile  build.sh
oci/cluster/: Containerfile  build.sh
oci/clusters/: Containerfile  build.sh
oci/filesystem/: Containerfile  build.sh
oci/freeipa/: Containerfile  build.sh
oci/platform/: Containerfile  build.sh
oci/portal/: Containerfile  build.sh
oci/provider/: Containerfile  build.sh
oci/slurm/: Containerfile  build.sh
paddington/: Cargo.toml
paddington/src/: args.rs  client.rs  command.rs  config.rs  connection.rs  crypto.rs  error.rs  eventloop.rs  exchange.rs  healthcheck.rs  invite.rs  lib.rs  message.rs  messagebus.rs  server.rs
portal/: Cargo.toml
portal-svc/: Cargo.toml
portal-svc/src/: main.rs
portal/src/: main.rs
provider/: Cargo.toml
provider-svc/: Cargo.toml
provider-svc/src/: main.rs
provider/src/: main.rs
python/: Cargo.toml  README.md  build.rs  pyproject.toml
python/src/: lib.rs
slurm/: Cargo.toml
slurm/src/: cache.rs  main.rs  sacctmgr.rs  slurm.rs
templemeads/: Cargo.toml
templemeads/bindings/: AwardDetails.ts  DailyProjectUsageReport.ts  DailyStorageReport.ts  DiagnosticsReport.ts  ExpiredJobEntry.ts  FailedJobEntry.ts  HealthInfo.ts  Job.ts  JobStatistics.ts  Link.ts  LogEntry.ts  MembershipControl.ts  Note.ts  NotificationStatistics.ts  ProjectStorageReport.ts  ProjectUsageReport.ts  Quota.ts  RunningJobEntry.ts  SlowJobEntry.ts  Status.ts  StorageReport.ts  Type.ts  Usage.ts  UsageReport.ts  UserUsageReport.ts  Volume.ts  helpers.ts  identifiers.ts
templemeads/src/: account.rs  agent.rs  agent_bridge.rs  agent_core.rs  board.rs  bridge.rs  bridge_server.rs  bridgeboard.rs  bridgestate.rs  client.rs  command.rs  config.rs  control_message.rs  custom.rs  destination.rs  diagnostics.rs  error.rs  filesystem.rs  grammar.rs  handler.rs  health.rs  instance.rs  job.rs  jobtiming.rs  lib.rs  notification.rs  notificationstate.rs  platform.rs  portal.rs  provider.rs  restart.rs  runnable.rs  scheduler.rs  state.rs  storage.rs  storagereport.rs  systeminfo.rs  usagereport.rs  virtual_agent.rs
