# SPDX-FileCopyrightText: © 2024 Christopher Woods <Christopher.Woods@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[workspace]

members = [
    "paddington", "portal-svc", "provider-svc", "templemeads",
]

resolver = "2"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
