# SPDX-FileCopyrightText: © 2024 Christopher Woods <Christopher.Woods@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[workspace]

members = [
    "bridge", "paddington", "portal", "provider", "python", "templemeads"
]

resolver = "2"

[profile.release]
strip = true
opt-level = 3
lto = false   # Disable LTO to speed up compilation
codegen-units = 1
panic = "abort"
