# SPDX-FileCopyrightText: © 2024 Christopher Woods <Christopher.Woods@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "op-bridge"
version = "0.16.2"
description = "An example of an OpenPortal user portal to OpenPortal bridge"
edition = "2021"
license = "MIT"
homepage = "https://github.com/chryswoods/openportal/"
repository = "https://github.com/chryswoods/openportal/"

[dependencies]
anyhow = { version="1.0.95", features = ["backtrace"] }
dirs = "6.0.0"
reqwest = { version = "0.12.12", default-features = false, features = ["cookies", "json", "blocking", "rustls-tls"] }
templemeads = { path = "../templemeads" }
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1.41"
url = { version="2.5.4", features=["serde"] }

[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"

[package.metadata.clippy]
allow-dbg-in-tests = true
