# SPDX-FileCopyrightText: © 2024 Christopher Woods <Christopher.Woods@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "op-client"
version = "0.1.0"
description = "An example of an OpenPortal portal client"
edition = "2021"
license = "MIT"
homepage = "https://github.com/chryswoods/openportal/"
repository = "https://github.com/chryswoods/openportal/"

[dependencies]
anyhow = { version="1.0.86", features = ["backtrace"] }
axum = { version = "0.7", features = ["tracing", "query"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
paddington = { path = "../paddington" }
serde_json = "1.0.122"
templemeads = { path = "../templemeads" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"

[package.metadata.clippy]
allow-dbg-in-tests = true
