# SPDX-FileCopyrightText: © 2024 Christopher Woods <Christopher.Woods@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "op-filesystem"
version = "0.21.0"
description = "Agent that interfaces OpenPortal with a filesystem"
edition = "2021"
license = "MIT"
homepage = "https://github.com/chryswoods/openportal/"
repository = "https://github.com/chryswoods/openportal/"

[dependencies]
anyhow = { version="1.0.100", features = ["backtrace"] }
chrono = "0.4.42"
dirs = "6.0.0"
filetime = "0.2.26"
nix = { version = "0.30.1", features = ["fs", "user"] }
once_cell = "1.21.3"
templemeads = { path = "../templemeads" }
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1.41"

unix_mode = "0.1.4"

[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"

[package.metadata.clippy]
allow-dbg-in-tests = true
