# SPDX-FileCopyrightText: © 2024 Christopher Woods <Christopher.Woods@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "op-freeipa"
version = "0.0.19"
description = "Agent that interfaces OpenPortal with FreeIPA"
edition = "2021"
license = "MIT"
homepage = "https://github.com/chryswoods/openportal/"
repository = "https://github.com/chryswoods/openportal/"

[dependencies]
anyhow = { version="1.0.86", features = ["backtrace"] }
dirs = "5.0.1"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.12.7", default-features = false, features = ["cookies", "json", "blocking", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
templemeads = { path = "../templemeads" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"

[package.metadata.clippy]
allow-dbg-in-tests = true
