# SPDX-FileCopyrightText: © 2024 Christopher Woods <Christopher.Woods@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "op-freeipa"
version = "0.9.5"
description = "Agent that interfaces OpenPortal with FreeIPA"
edition = "2021"
license = "MIT"
homepage = "https://github.com/chryswoods/openportal/"
repository = "https://github.com/chryswoods/openportal/"

[dependencies]
anyhow = { version="1.0.95", features = ["backtrace"] }
chrono = "0.4.39"
dirs = "6.0.0"
once_cell = "1.20.3"
rand = "0.9.0"
reqwest = { version = "0.12.12", default-features = false, features = ["cookies", "json", "blocking", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
templemeads = { path = "../templemeads" }
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1.41"


[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"

[package.metadata.clippy]
allow-dbg-in-tests = true
