# SPDX-FileCopyrightText: © 2024 Christopher Woods <Christopher.Woods@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "op-freeipa"
version = "0.20.2"
description = "Agent that interfaces OpenPortal with FreeIPA"
edition = "2021"
license = "MIT"
homepage = "https://github.com/chryswoods/openportal/"
repository = "https://github.com/chryswoods/openportal/"

[dependencies]
anyhow = { version="1.0.100", features = ["backtrace"] }
chrono = "0.4.42"
dirs = "6.0.0"
once_cell = "1.21.3"
rand = { version = "0.9.2", features = ["std_rng"] }
reqwest = { version = "0.12.24", default-features = false, features = ["cookies", "json", "blocking", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
templemeads = { path = "../templemeads" }
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1.41"


[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"

[package.metadata.clippy]
allow-dbg-in-tests = true
