# SPDX-FileCopyrightText: © 2024 Christopher Woods <Christopher.Woods@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "paddington"
version = "0.0.19"
description = "A library for implementing the OpenPortal communication protocol"
edition = "2021"
license = "MIT"
homepage = "https://github.com/chryswoods/openportal/"
repository = "https://github.com/chryswoods/openportal/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
built = { version = "0.7", default-features = false, features = ["git2"] }

[dependencies]
anyhow = { version="1.0.86", features = ["backtrace"] }
axum = { version = "0.7", features = ["tracing", "query"] }
dirs = "5.0.1"
futures = "0.3.30"
futures-channel = "0.3.30"
futures-util = "0.3.30"
hex = {version="0.4.3", features = ["serde"]}
iptools = "0.2.5"
once_cell = "1.19.0"
orion = "0.17.6"
rustls = { version = "0.23.16", features = ["ring"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
serde_with = { version="3.9.0", features = ["hex"] }
thiserror = "1.0.63"
tokio = { version = "1.0", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
toml = "0.8.16"
tracing = "0.1.40"
tungstenite = "0.24.0"
url = {version="2.5.2", features=["serde"]}

[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"

[package.metadata.clippy]
allow-dbg-in-tests = true
