# SPDX-FileCopyrightText: © 2024 Christopher Woods <Christopher.Woods@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "paddington"
version = "0.21.1"
description = "A library for implementing the OpenPortal communication protocol"
edition = "2021"
license = "MIT"
homepage = "https://github.com/chryswoods/openportal/"
repository = "https://github.com/chryswoods/openportal/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
built = { version = "0.8", default-features = false, features = ["git2"] }

[dependencies]
anyhow = { version="1.0.100", features = ["backtrace"] }
axum = { version = "0.8", features = ["tracing", "query"] }
chrono = { version="0.4.42", features=["serde"] }
dirs = "6.0.0"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
hex = {version="0.4.3", features = ["serde"]}
iptools = "0.3.0"
once_cell = "1.21.3"
orion = "0.17.11"
rustls = { version = "0.23.35", features = ["ring"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_with = { version="3.15.1", features = ["hex"] }
thiserror = "2.0.17"
tokio = { version = "1.48", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
toml = "0.9.8"
tracing = "0.1.41"
tungstenite = "0.28.0"
url = {version="2.5.7", features=["serde"]}

[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"

[package.metadata.clippy]
allow-dbg-in-tests = true
