[package]
name = "portal-svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paddington = { path = "../paddington" }
templemeads = { path = "../templemeads" }
tokio = { version = "1", features = ["full"] }