# SPDX-FileCopyrightText: © 2024 Christopher Woods <Christopher.Woods@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "openportal"
description = "Python wrappers for OpenPortal"
edition = "2021"
license = "MIT"
homepage = "https://github.com/chryswoods/openportal/"
repository = "https://github.com/chryswoods/openportal/"

[lib]
name = "openportal"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version="1.0.86", features = ["backtrace"] }
chrono = "0.4.38"
once_cell = "1.19.0"
pyo3 = { version="0.22.2" }
reqwest = { version = "0.11.0", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
serde_with = { version="3.9.0", features = ["hex"] }
templemeads = { path = "../templemeads" }
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = {version="2.5.2", features=["serde"]}
