# SPDX-FileCopyrightText: © 2024 Christopher Woods <Christopher.Woods@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "openportal"
version = "0.0.19"
description = "Python wrappers for OpenPortal"
edition = "2021"
license = "MIT"
homepage = "https://github.com/chryswoods/openportal/"
repository = "https://github.com/chryswoods/openportal/"

[lib]
name = "openportal"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version="1.0.86", features = ["backtrace"] }
chrono = "0.4.38"
once_cell = "1.19.0"
paddington = { path = "../paddington" }
pyo3 = { version="0.22.2" }
reqwest = { version = "0.12.7", default-features = false, features = ["cookies", "json", "blocking", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
serde_with = { version="3.9.0", features = ["hex"] }
templemeads = { path = "../templemeads" }
thiserror = "1.0.63"
toml = "0.8.16"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = {version="2.5.2", features=["serde"]}
uuid = { version="1.10.0", features=["serde", "v4", "fast-rng", "macro-diagnostics"] }

[build-dependencies]
pyo3-build-config = "0.22.5"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
