# SPDX-FileCopyrightText: © 2024 Christopher Woods <Christopher.Woods@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "openportal"
version = "0.9.5"
description = "Python wrappers for OpenPortal"
edition = "2021"
license = "MIT"
homepage = "https://github.com/isambard-sc/openportal/"
repository = "https://github.com/isambard-sc/openportal/"

[lib]
name = "openportal"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version="1.0.95", features = ["backtrace"] }
chrono = "0.4.39"
once_cell = "1.20.3"
paddington = { path = "../paddington" }
pyo3 = { version="0.23.4", features = ["chrono"] }
reqwest = { version = "0.12.12", default-features = false, features = ["cookies", "json", "blocking", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
serde_with = { version="3.12.0", features = ["hex"] }
templemeads = { path = "../templemeads" }
thiserror = "2.0.11"
toml = "0.8.20"
tracing = "0.1.41"

url = {version="2.5.4", features=["serde"]}
uuid = { version="1.13.1", features=["serde", "v4", "fast-rng", "macro-diagnostics"] }

[build-dependencies]
pyo3-build-config = "0.23.4"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
