# SPDX-FileCopyrightText: © 2024 Christopher Woods <Christopher.Woods@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "templemeads"
version = "0.0.19"
description = "A library for interfacing OpenPortal with specific portals"
edition = "2021"
license = "MIT"
homepage = "https://github.com/chryswoods/openportal/"
repository = "https://github.com/chryswoods/openportal/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
built = { version = "0.7", default-features = false, features = ["git2"] }

[dependencies]
anyhow = { version="1.0.86", features = ["backtrace"] }
axum = { version = "0.7", features = ["tracing", "query"] }
clap = { version = "4.5.11", default-features = false, features = ["derive", "color", "help", "usage", "error-context","suggestions", "env", "std", "string"] }
chrono = { version="0.4.38", features=["serde"] }
once_cell = "1.19.0"
paddington = { path = "../paddington" }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.63"
tokio = { version = "1.0", features = ["full", "tracing"] }
tracing = "0.1.40"
url = { version="2.5.2", features=["serde"] }
uuid = { version="1.10.0", features=["serde", "v4", "fast-rng", "macro-diagnostics"] }

[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"

[package.metadata.clippy]
allow-dbg-in-tests = true
