# SPDX-FileCopyrightText: © 2024 Christopher Woods <Christopher.Woods@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "templemeads"
version = "0.9.5"
description = "A library for interfacing OpenPortal with specific portals"
edition = "2021"
license = "MIT"
homepage = "https://github.com/chryswoods/openportal/"
repository = "https://github.com/chryswoods/openportal/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
built = { version = "0.7", default-features = false, features = ["git2"] }

[dependencies]
anyhow = { version="1.0.95", features = ["backtrace"] }
axum = { version = "0.8", features = ["tracing", "query"] }
clap = { version = "4.5.29", default-features = false, features = ["derive", "color", "help", "usage", "error-context","suggestions", "env", "std", "string"] }
chrono = { version="0.4.39", features=["serde"] }
once_cell = "1.20.3"
paddington = { path = "../paddington" }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43", features = ["full", "tracing"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = { version="2.5.4", features=["serde"] }
uuid = { version="1.13.1", features=["serde", "v4", "fast-rng", "macro-diagnostics"] }

[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"

[package.metadata.clippy]
allow-dbg-in-tests = true
