# SPDX-FileCopyrightText: © 2024 Christopher Woods <Christopher.Woods@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "example-echo"
version = "0.0.19"
description = "Paddington Echo Service example"
edition = "2021"
license = "MIT"
homepage = "https://github.com/chryswoods/openportal/"
repository = "https://github.com/chryswoods/openportal/"

[build-dependencies]
built = { version = "0.7", default-features = false, features = ["git2"] }

[dependencies]
anyhow = { version="1.0.86", features = ["backtrace"] }
clap = { version = "4.5.11", default-features = false, features = ["derive", "color", "help", "usage", "error-context","suggestions", "env", "std", "string"] }
paddington = { path = "../../paddington" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"

[package.metadata.clippy]
allow-dbg-in-tests = true
